# opencold

./: .gitignore  README.md  pyproject.toml  requirements.txt  sources.txt
opencold/: cli.py  config.py  crawler.py  discovery.py  enricher.py  generator.py  icp_expansion.py  icp_phrases.py  icp_synonyms.py  pipeline.py  prompts.py  quality.py  regions_data.py  sender.py  translator.py  verifier.py
server/: Dockerfile  README.md  auth.py  jobs.py  main.py  models.py  requirements.txt
tests/: conftest.py  test_cli.py  test_company_discovery.py  test_config.py  test_crawler.py  test_discovery.py  test_enricher.py  test_generator.py  test_icp_expansion.py  test_icp_phrases.py  test_linkedin_discovery.py  test_pipeline.py  test_prompts.py  test_quality.py  test_sender.py  test_translator.py  test_verifier.py
tests/fixtures/: test_input.csv  test_input_no_website.csv
web/: .gitignore  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/run/: route.ts
web/src/app/api/run/[jobId]/: route.ts
web/src/app/api/send/: route.ts
web/src/app/api/smtp/test/: route.ts
web/src/components/: DiscoveryGraph.tsx  DiscoveryTree.tsx  WorldMap.tsx
web/src/lib/: api.ts  upstream.ts
